# financial-data-toolkit

./: .gitignore  README.md  environment.yml  pyproject.toml
notebooks/: backtesting.ipynb  ff3.ipynb  init.ipynb
