[project]
name = "financial-data-toolkit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "backtesting>=0.6.5",
    "hmmlearn>=0.3.3",
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.6",
    "seaborn>=0.13.2",
    "yfinance>=0.2.65",
]
