[project]
name = "financial-data-toolkit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "backtesting>=0.6.5",
    "geckodriver>=0.0.1",
    "hmmlearn>=0.3.3",
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.6",
    "seaborn>=0.13.2",
    "selenium>=4.35.0",
    "yfinance>=0.2.65",
]
